--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,22 @@ hs_err_pid6360.log/
 sentiment.png
 df.parquet/
 df_sorted.parquet/
+df_3sorted.parquet/
+df_4sorted.parquet/
+df_5sorted.parquet/
+df_6sorted.parquet/
+df_7sorted.parquet/
+df_8sorted.parquet/
+df_9sorted.parquet/
+df_10sorted.parquet/
+df_11sorted.parquet/
+df_12sorted.parquet/
+df_6.parquet/
+df_7.parquet/
+df_8.parquet/
+df_9.parquet/
+df_10.parquet/
+df_11.parquet/
+df_12.parquet/
+
+
